# telepayroll

./: .env  .gitignore  Dockerfile  README.md  env.example  pyproject.toml
app/: config.py  context.py  main.py
app/domain/: payroll.py
app/handlers/: common.py  informatics.py  payroll.py  roster.py
app/infra/: db.py
app/infra/repos/: polls.py  settings.py  teachers.py  votes.py
app/middlewares/: admin_only.py  context_injector.py
app/services/: payroll.py  polls.py  ui.py
app/utils/: auth.py  callback_data.py  text.py
tests/: conftest.py  test_admin_mw.py  test_payroll_and_ui.py  test_polls_service.py  test_repos.py  test_roster_flow.py
