[project]
name = "telepayroll"
version = "0.2.0"
description = "Telegram bot for attendance/payroll (Informatics MVP)"
authors = [{name = "You"}]
requires-python = ">=3.10"
dependencies = [
  "aiogram>=3.4.0",
  "pydantic>=2.6",
  "pydantic-settings>=2.0",
  "python-dotenv>=1.0",
]

[tool.ruff]
line-length = 100
select = ["E","F","I","UP","B","ARG","SIM"]

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
