[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "telepayroll"
version = "0.1.0"
description = "Telegram bot for polls and payroll calculations"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Igor" }]

dependencies = [
  "aiogram>=3.0.0",
  "pydantic>=2.4.0",
  "pydantic-settings>=2.0.0",
  "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5",
  "pytest-xdist>=3",
  "ruff>=0.6",
  "black>=24.8",
  "mypy>=1.11",
  "httpx>=0.27",
  "types-requests",
  "pre-commit>=3.7",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build.targets.sdist]
include = ["app", "pyproject.toml", "README.md", "tests"]

[tool.pytest.ini_options]
# Если ставишь пакет через `pip install -e .`, можно и без pythonpath.
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["app"]
force-single-line = false
combine-as-imports = true

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
no_implicit_optional = true
strict_equality = true
ignore_missing_imports = true